security cleanup of transitive dependencies (#26)
* security cleanup of transitive dependencies
Updated container build files to include update of system packages
Updated jackson-databind version
Pinned snakeyaml to 1.33 - transitive dependency of databind-jackson
that was incorrectly imported

* APPSEC-2181 docker best practices
added non-privileged appuser

--- a/confluent-sigma/sigma-streams/Dockerfile
+++ b/confluent-sigma/sigma-streams/Dockerfile
@@ -2,6 +2,11 @@
 # docker push michaelpeacock/confluent-sigma:v1
 
 FROM openjdk:11
+RUN apt-get update && apt-get upgrade -y \
+  && useradd --no-log-init --create-home --shell /bin/bash appuser \
+  && rm -rf /var/lib/apt/lists/*
+
 COPY ./target/sigma-streams-1.2.1-fat.jar /tmp
+USER appuser
 WORKDIR /tmp
 CMD java -cp sigma-streams-1.2.1-fat.jar io.confluent.sigmarules.SigmaStreamsApp -c /tmp/config/sigma.properties
