--- a/confluent-sigma/sigma-streams/Dockerfile
+++ b/confluent-sigma/sigma-streams/Dockerfile
@@ -1,11 +1,10 @@
-# docker push michaelpeacock/confluent-sigma:v1
-
 FROM openjdk:11
 RUN apt-get update && apt-get upgrade -y \
   && useradd --no-log-init --create-home --shell /bin/bash appuser \
-  && rm -rf /var/lib/apt/lists/*
+  && rm -rf /var/lib/apt/lists/
 
-COPY ./target/sigma-streams-1.2.1-fat.jar /tmp
+COPY ./target/sigma-streams-1.3.0-fat.jar /tmp
 USER appuser
 WORKDIR /tmp
-CMD java -jar sigma-streams-1.3.2-fat.jar
+ENTRYPOINT ["java", "-cp", "sigma-streams-1.3.2-fat.jar", "io.confluent.sigmarules.SigmaStreamsApp"]
+CMD java -jar sigma-streams-1.3.0-fat.jar
