--- a/confluent-sigma/sigma-streams/Dockerfile
+++ b/confluent-sigma/sigma-streams/Dockerfile
@@ -6,5 +6,5 @@ RUN apt-get update && apt-get upgrade -y \
 COPY ./target/sigma-streams-1.3.0-fat.jar /tmp
 USER appuser
 WORKDIR /tmp
-ENTRYPOINT ["java", "-cp", "sigma-streams-1.3.2-fat.jar", "io.confluent.sigmarules.SigmaStreamsApp"]
+ENTRYPOINT ["java", "-jar", "sigma-streams-1.3.0-fat.jar"]
 CMD java -jar sigma-streams-1.3.0-fat.jar
