Sigma stream env (#27)
* - Made the kafka version dependency a parent level project properties in maven
- Added in the plugin to build a docker image and push it

* Added some execution tweaks to the docker build task

* Switching to variable for build version

* making build version dynamic

* making build version dynamic

* making build version dynamic

* making build version dynamic

* making build version dynamic

* making build version dynamic

* Adding a new demo properties file and normalizing the other property files.

* adding profile to avoid building docker stuff when you don't want it.

* Tweeks to the formatting of pom

* New build script

* docker-compose to demonstrate or try confluent sigma

* Switching to latest since this won't be part of the build

* Fixed org name to confluentinc

* Fixed org name to confluentinc

* Added docker image build for UI Container

* Moving location of build script

* Removing build notes

* changed build script to have execution permission

* Updated the version number for docker images and removed comments

* adjustments to build

* updated org name for image

* updated org name for image

* Removing vestigial script

* Added the ability to interrogate for required properties if they are not present on execution

* Added application.id as required config parameter

* switched image to an entry point

* simplified docker-compose for demo of confluent-sigma

* Updated image and docker-compose to enable easier passing of external configs and parameters

* adding in demonstration supporing filers

* removing unecessary files

* renamed mapping

* Added logging for parameters

* new demo data and loader script

* Adjusted to pre-load test dns data

* - Added in a proper healthcheck for the broker service
- Added confluent-sigma-ui back into the demo docker-compose.yml

* - Made auto-configure.sh compose properly with confluent-sigma.sh.
- auto-c

--- a/confluent-sigma/sigma-streams-ui/pom.xml
+++ b/confluent-sigma/sigma-streams-ui/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>confluent-sigma</artifactId>
         <groupId>io.confluent</groupId>
-        <version>1.2.1</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -16,6 +16,34 @@
         <maven.compiler.target>11</maven.compiler.target>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
     </properties>
+
+    <profiles>
+        <profile>
+            <id>no-docker</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.spotify</groupId>
+                        <artifactId>dockerfile-maven-plugin</artifactId>
+                        <version>${dockerfile-maven-version}</version>
+                        <executions>
+                            <execution>
+                                <id>package</id>
+                                <phase>none</phase>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <repository>confluentinc/confluent-sigma</repository>
+                            <tag>${project.version}</tag>
+                            <buildArgs>
+                                <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
+                            </buildArgs>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <repositories>
         <repository>
@@ -40,12 +68,12 @@
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-streams</artifactId>
-            <version>3.3.1</version>
+            <version>${kafka.version}</version>
             </dependency>
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
-            <version>3.3.1</version>
+            <version>${kafka.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -167,13 +195,13 @@
         <dependency>
             <groupId>io.confluent</groupId>
             <artifactId>sigma-parser</artifactId>
-            <version>1.2.1</version>
+            <version>${revision}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.confluent</groupId>
             <artifactId>sigma-streams</artifactId>
-            <version>1.2.1</version>
+            <version>${revision}</version>
             <scope>compile</scope>
         </dependency>
         <!--  Jackson brings up the latest as of 1/4/2022 Snakeyaml version, however in build process, 1.30 is pulled in. Pinning to fix it  -->
@@ -190,6 +218,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.7.7</version>
                 <configuration>
                     <addResources>true</addResources>
                 </configuration>
@@ -220,6 +249,50 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>flatten-maven-plugin</artifactId>
+                <version>1.2.5</version>
+                <configuration>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>flatten</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>flatten</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>flatten.clean</id>
+                        <phase>clean</phase>
+                        <goals>
+                            <goal>clean</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>dockerfile-maven-plugin</artifactId>
+                <version>${dockerfile-maven-version}</version>
+                <executions>
+                    <execution>
+                        <id>package</id>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <repository>confluentinc/confluent-sigma-ui</repository>
+                    <tag>${project.version}</tag>
+                    <buildArgs>
+                        <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
+                    </buildArgs>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
