--- a/confluent-sigma/pom.xml
+++ b/confluent-sigma/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.confluent</groupId>
     <artifactId>confluent-sigma</artifactId>
-    <version>1.2.1</version>
+    <version>${revision}</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -18,6 +18,8 @@
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <kafka.version>3.3.1</kafka.version>
+        <dockerfile-maven-version>1.4.13</dockerfile-maven-version>
         <jackson.version>2.14.1</jackson.version>
     </properties>
 
