--- a/confluent-sigma/sigma-streams/config/ccloud.properties
+++ b/confluent-sigma/sigma-streams/config/ccloud.properties
@@ -1,8 +1,8 @@
 # Kafka Streams properties
 
 application.id=dns-streams-app
-bootstrap.server=pkc-2396y.us-east-1.aws.confluent.cloud:9092
-schema.registry=https://psrc-yg906.us-east-2.aws.confluent.cloud
+bootstrap.server=xxxx.us-east-1.aws.confluent.cloud:9092
+schema.registry=https://xxxx.us-east-2.aws.confluent.cloud
 
 # For using SASL for something like Confluent Cloud uncomment and put in correct creds
 
