Simplified key for metrics api

--- a/confluent-sigma/sigma-streams/config/sigma-cc-admin.properties
+++ b/confluent-sigma/sigma-streams/config/sigma-cc-admin.properties
@@ -3,5 +3,5 @@
 bootstrap.server=XXX.us-east-1.aws.confluent.cloud:9092
 schema.registry=https://XXX.us-east-2.aws.confluent.cloud
 
-key=xxx
-secret=xxx
+# Base64 encoded string of key:secret
+rest.auth.token=xxxxxxxxxxxxxxx
