--- a/sigma-streams-ui/src/main/frontend/package.json
+++ b/sigma-streams-ui/src/main/frontend/package.json
@@ -30,7 +30,7 @@
     "tinycolor2": "^1.4.2"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
