--- a/sigma-streams-ui/src/main/frontend/package.json
+++ b/sigma-streams-ui/src/main/frontend/package.json
@@ -9,25 +9,29 @@
     "node-fetch": "^2.6.1"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
+    "@material-ui/icons": "^4.11.3",
     "@material-ui/styles": "^4.11.3",
-    "@mdi/js": "^5.9.55",
-    "@mdi/react": "^1.4.0",
-    "apexcharts": "^3.24.0",
-    "classnames": "^2.2.6",
+    "@mdi/js": "^7.2.96",
+    "@mdi/react": "^1.6.1",
+    "@mui/icons-material": "^5.13.7",
+    "@mui/material": "^5.13.7",
+    "apexcharts": "^3.41.0",
+    "classnames": "^2.3.2",
     "font-awesome": "^4.7.0",
-    "mui-datatables": "^3.7.4",
-    "react": "^16.14.0",
-    "react-apexcharts": "^1.3.7",
-    "react-dom": "^16.14.0",
+    "mui-datatables": "^4.3.0",
+    "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
+    "react-dom": "^18.2.0",
     "react-google-maps": "^9.4.5",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "react-syntax-highlighter": "^15.4.3",
-    "react-toastify": "^7.0.3",
-    "recharts": "^2.0.4",
-    "tinycolor2": "^1.4.2"
+    "react-router-dom": "^6.14.1",
+    "react-scripts": "^5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-toastify": "^9.1.3",
+    "recharts": "^2.7.2",
+    "tinycolor2": "^1.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,7 +55,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/helper-call-delegate": "^7.11.4",
-    "prettier": "^2.1.1"
+    "@babel/helper-call-delegate": "^7.12.13",
+    "prettier": "^3.0.0"
   }
 }
