--- a/sigma-streams-ui/src/main/frontend/package.json
+++ b/sigma-streams-ui/src/main/frontend/package.json
@@ -16,6 +16,7 @@
     "@material-ui/styles": "^4.11.3",
     "@mdi/js": "^7.2.96",
     "@mdi/react": "^1.6.1",
+    "@monaco-editor/react": "^4.5.1",
     "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.13.7",
     "ace-builds": "^1.23.2",
@@ -30,6 +31,8 @@
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
+    "react-sliding-pane": "^7.3.0",
+    "react-stomp-hooks": "^2.1.0",
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^9.1.3",
     "recharts": "^2.7.2",
