--- a/sigma-streams-ui/src/main/frontend/src/components/Layout/package.json
+++ b/sigma-streams-ui/src/main/frontend/src/components/Layout/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Layout",
+  "name": "DataTable",
   "version": "1.0.0",
   "private": true,
-  "main": "Layout.js"
+  "main": "DataTable.js"
 }
