updated regex support to include mapping; removed null fields from output topic; added additional kafka field

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "RegexStream",
+            "request": "launch",
+            "mainClass": "io.confiuent.sigmaui.streams.RegexStream",
+            "projectName": "sigma-streams-ui"
+        },
+        {
+            "type": "java",
             "name": "SigmaStreamsApp",
             "request": "launch",
             "mainClass": "io.confluent.sigmarules.SigmaStreamsApp",
