--- a/sigma-streams/config/rules/regex_rule.yml
+++ b/sigma-streams/config/rules/regex_rule.yml
@@ -10,12 +10,12 @@ detection:
   filter_field:
     sourcetype: cisco:asa
   event_match:
-    event|re: ^(?<timestamp>\w{3}\s\d{2}\s\d{2}:\d{2}:\d{2})\s(?<hostname>[^\s]+)\s\%ASA-\d-(?<messageID>[^:]+):\s(?<action>[^\s]+)\s(?<protocol>[^\s]+)\ssrc\sinside:(?<src>[0-9\.]+)\/(?<srcport>[0-9]+)\sdst\soutside:(?<dest>[0-9\.]+)\/(?<destport>[0-9]+)
+    event|re: '^(?<timestamp>\w{3}\s\d{2}\s\d{2}:\d{2}:\d{2})\s(?<hostname>[^\s]+)\s\%ASA-\d-(?<messageID>[^:]+):\s(?<action>[^\s]+)\s(?<protocol>[^\s]+)\ssrc\sinside:(?<src>[0-9\.]+)\/(?<srcport>[0-9]+)\sdst\soutside:(?<dest>[0-9\.]+)\/(?<destport>[0-9]+)'
   condition: filter_field AND event_match
 kafka: 
   inputTopic: splunk-s2s-events
   outputTopic: firewalls
-  metaData:
+  customFields:
     location: edge
     sourcetype: cisco:asa
     index: main
