--- a/sigma-streams/src/main/resources/application.properties
+++ b/sigma-streams/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 application.id=dns-streams-app
-bootstrap.server=localhost:9092
+bootstrap.servers=localhost:9092
 schema.registry=localhost:8081
 
 data.topic=dns
