bootstrap.server now correctly pluralized.

--- a/sigma-streams/config/sigma-cc-admin.properties
+++ b/sigma-streams/config/sigma-cc-admin.properties
@@ -1,6 +1,6 @@
 # Properties for working with CC
 
-bootstrap.server=XXX.us-east-1.aws.confluent.cloud:9092
+bootstrap.servers=XXX.us-east-1.aws.confluent.cloud:9092
 schema.registry=https://XXX.us-east-2.aws.confluent.cloud
 
 # Base64 encoded string of key:secret
