--- a/sigma-streams/config/sigma.properties
+++ b/sigma-streams/config/sigma.properties
@@ -1,7 +1,7 @@
 # Kafka Streams properties
 
 application.id=sigma-streams-app
-bootstrap.server=localhost:9092
+bootstrap.servers=localhost:9092
 schema.registry=localhost:8081
 num.stream.threads=10
 
