--- a/sigma-streams/config/sigma-docker-demo.properties
+++ b/sigma-streams/config/sigma-docker-demo.properties
@@ -1,6 +1,6 @@
 # Kafka Streams properties
 application.id=sigma-streams-app
-bootstrap.server=localhost:9092
+bootstrap.servers=localhost:9092
 schema.registry=localhost:8081
 num.stream.threads=10
 
