- Added sigma.rule.first.match=false to sample config files

--- a/sigma-streams/config/ccloud.properties
+++ b/sigma-streams/config/ccloud.properties
@@ -12,6 +12,12 @@ sasl.mechanism=PLAIN
 
 # Sigma specific config
 
+# return results on the first matching rule and stop matching other rules against said record.
+# only valid for non-aggregate rules
+
+# sigma.rule.first.match=false
+
+
 data.topic=dns
 output.topic=dns-detection
 field.mapping.file=config/zeek-mapping.yml
