--- a/sigma-streams/config/sigma.properties
+++ b/sigma-streams/config/sigma.properties
@@ -12,6 +12,11 @@ output.topic=sigma-detection
 field.mapping.file=config/zeek-mapping.yml
 sigma.rules.topic=sigma-rules
 
+# return results on the first matching rule and stop matching other rules against said record.
+# only valid for non-aggregate rules
+
+# sigma.rule.first.match=false
+
 # Optional parameters if you want to filter out the rules to be applied
 
 # sigma.rule.filter.product=zeek
