--- a/sigma-streams/config/sigma-docker-demo.properties
+++ b/sigma-streams/config/sigma-docker-demo.properties
@@ -5,10 +5,16 @@ schema.registry=localhost:8081
 num.stream.threads=10
 
 # Sigma specific config
+
 data.topic=dns
 output.topic=dns-detection
 field.mapping.file=/tmp/config/zeek-mapping.yml
 sigma.rules.topic=sigma-rules
+
+# return results on the first matching rule and stop matching other rules against said record.
+# only valid for non-aggregate rules
+
+# sigma.rule.first.match=false
 
 # Optional parameters if you want to filter out the rules to be applied
 
