updated to support demo

--- a/.gitignore
+++ b/.gitignore
@@ -86,6 +86,7 @@ target/*
 logs
 **/*.backup.*
 **/*.back.*
+**/static
 
 node_modules
 bower_components
@@ -98,4 +99,6 @@ sketch
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+*.pcap
 
