--- a/sigma-streams-ui/src/main/resources/application.properties
+++ b/sigma-streams-ui/src/main/resources/application.properties
@@ -4,6 +4,8 @@ bootstrap.servers=localhost:9092
 schema.registry=localhost:8081
 group.id=sigma-streams-ui
 auto.offset.reset=latest
+enable.auto.commit=true
+max.poll.records=5000
 key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 topic.list=dns, dns-detection, splunk-s2s-events, firewalls
