--- a/sigma-streams/config/rules/regex_rule.yml
+++ b/sigma-streams/config/rules/regex_rule.yml
@@ -1,8 +1,6 @@
-title: Regex Test Rule
+title: Cisco Firewalls Extraction
 description: This rule is the regex rule test
-id: null
 author: Mike Peacock
-references: null
 logsource:
   product: splunk
   service: cisco:asa
@@ -13,7 +11,6 @@ detection:
     event|re: '^(?<timestamp>\w{3}\s\d{2}\s\d{2}:\d{2}:\d{2})\s(?<hostname>[^\s]+)\s\%ASA-\d-(?<messageID>[^:]+):\s(?<action>[^\s]+)\s(?<protocol>[^\s]+)\ssrc\sinside:(?<src>[0-9\.]+)\/(?<srcport>[0-9]+)\sdst\soutside:(?<dest>[0-9\.]+)\/(?<destport>[0-9]+)'
   condition: filter_field AND event_match
 kafka: 
-  inputTopic: splunk-s2s-events
   outputTopic: firewalls
   customFields:
     location: edge
