added avro for simple topology

--- a/sigma-streams/src/main/resources/application.properties
+++ b/sigma-streams/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-application.id=dns-streams-app
-bootstrap.servers=localhost:9092
-schema.registry=localhost:8081
+application.id=dns-streams-app-test
+bootstrap.servers=ec2-3-138-106-128.us-east-2.compute.amazonaws.com:9092
+schema.registry=http://ec2-3-138-106-128.us-east-2.compute.amazonaws.com:8081
 
 data.topic=dns
-output.topic=dns-detection
+data.topic.format=json
+output.topic=dns-detection-json2
+output.topic.format=json
 
 sigma.rules.topic=sigma-rules
 sigma.rule.filter.product=zeek
