--- a/sigma-streams/src/main/resources/application.properties
+++ b/sigma-streams/src/main/resources/application.properties
@@ -2,10 +2,10 @@ application.id=dns-streams-app-test
 bootstrap.servers=ec2-3-138-106-128.us-east-2.compute.amazonaws.com:9092
 schema.registry=http://ec2-3-138-106-128.us-east-2.compute.amazonaws.com:8081
 
-data.topic=dns
-data.topic.format=json
-output.topic=dns-detection-json2
-output.topic.format=json
+data.topic=dns-avro
+data.topic.format=avro
+output.topic=dns-detection-avro-agg
+output.topic.format=avro
 
 sigma.rules.topic=sigma-rules
 sigma.rule.filter.product=zeek
