--- a/sigma-parser/pom.xml
+++ b/sigma-parser/pom.xml
@@ -29,7 +29,7 @@
     <dependency>
       <groupId>io.confluent</groupId>
       <artifactId>kafka-json-serializer</artifactId>
-      <version>6.2.16-14</version>
+      <version>6.2.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.kafka</groupId>
