--- a/sigma-streams/pom.xml
+++ b/sigma-streams/pom.xml
@@ -41,12 +41,12 @@
         <dependency>
             <groupId>io.confluent</groupId>
             <artifactId>kafka-json-serializer</artifactId>
-            <version>7.9.1-157</version>
+            <version>7.6.0</version>
         </dependency>
         <dependency>
             <groupId>io.confluent</groupId>
             <artifactId>kafka-streams-avro-serde</artifactId>
-            <version>7.9.1-157</version>
+            <version>7.6.0</version>
         </dependency>
         <dependency>
             <groupId>javax.annotation</groupId>
