--- a/sigma-streams-ui/pom.xml
+++ b/sigma-streams-ui/pom.xml
@@ -136,7 +136,7 @@
         <dependency>
             <groupId>io.confluent</groupId>
             <artifactId>kafka-json-serializer</artifactId>
-            <version>6.2.16-14</version>
+            <version>6.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
