--- a/sigma-streams/test/benchmarks/configs/2/benchmark.properties
+++ b/sigma-streams/test/benchmarks/configs/2/benchmark.properties
@@ -8,7 +8,7 @@ num.stream.threads=10
 
 # Sigma specific config
 
-data.topic=confluent-benchmark-2
+data.topic=dns10
 output.topic=dns-detection
 field.mapping.file=config/zeek-mapping.yml
 sigma.rules.topic=sigma-rules
