--- a/sigma-streams/test/benchmarks/configs/4/benchmark.properties
+++ b/sigma-streams/test/benchmarks/configs/4/benchmark.properties
@@ -8,7 +8,7 @@ num.stream.threads=50
 
 # Sigma specific config
 
-data.topic=confluent-benchmark-1
+data.topic=dns50
 output.topic=dns-detection
 field.mapping.file=config/zeek-mapping.yml
 sigma.rules.topic=sigma-rules
