Added default compression type for sigma of snappy for output

--- a/sigma-streams/config/sigma.properties
+++ b/sigma-streams/config/sigma.properties
@@ -5,6 +5,11 @@ bootstrap.servers=localhost:9092
 schema.registry=localhost:8081
 num.stream.threads=10
 
+# Producer properties
+compression.type=snappy
+batch.size=16384
+linger.ms=5
+
 # Sigma specific config
 
 data.topic=sigma-test
